--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,11 +99,13 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':base_libs')
+//    api 'com.github.tian-y05:civilization:v1.0.0'
     implementation "com.android.support:appcompat-v7:28.0.0"
     api 'com.android.support:multidex:1.0.3'
-    //smartRefreshLayout 下拉刷新
     implementation "io.reactivex.rxjava2:rxjava:2.1.5"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    //smartRefreshLayout 下拉刷新
+
 }
 
 buildscript {
