--- a/base_libs/build.gradle
+++ b/base_libs/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'me.tatarka.retrolambda'  //lambda配置
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'kotlin-kapt'
 //apply plugin: 'maven'
 
@@ -98,8 +97,8 @@ dependencies {
     testImplementation "junit:junit:4.12"
     androidTestImplementation "com.android.support.test:runner:1.0.2"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
-    annotationProcessor "com.jakewharton:butterknife-compiler:8.4.0"
-    implementation "com.jakewharton:butterknife:8.4.0"
+//    annotationProcessor "com.jakewharton:butterknife-compiler:8.4.0"
+//    implementation "com.jakewharton:butterknife:8.4.0"
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
