--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'  //註解
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'  //註解
         classpath 'me.tatarka:gradle-retrolambda:3.7.0' //lambda配置
         //插件
         classpath 'com.novoda:bintray-release:0.8.0'
