--- a/base_libs/build.gradle
+++ b/base_libs/build.gradle
@@ -22,10 +22,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-
-    }
 
     buildTypes {
         debug {
@@ -79,14 +75,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.2.60"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.1.51"
     }
 }
 
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.60"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.51"
 
     implementation "com.android.support:appcompat-v7:28.0.0"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
