--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ android {
             abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
     }
-
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
     compileOptions {//使用JAVA8语法解析
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -97,11 +99,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':base_libs')
-//    api 'com.github.tian-y05:civilization:v1.0.0'
+//    api 'com.github.tian-y05:civilization:v1.0.3'
     implementation "com.android.support:appcompat-v7:28.0.0"
     api 'com.android.support:multidex:1.0.3'
-    implementation "io.reactivex.rxjava2:rxjava:2.1.5"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     //smartRefreshLayout 下拉刷新
 
 }
