--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ buildscript {
         classpath 'com.novoda:bintray-release:0.8.0'
         //kotlin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 //        classpath "com.tencent.bugly:tinker-support:1.1.5"
     }
 
